Make TabLoader responsible for loading all tabs.

Currently there's an inversion where active tabs in minimized windows don't get
loaded as they are created. This is an optimization in the occlusion tracking code
that doesn't calls ReloadIfNecessary unless the window hosting the active tab
actually becomes visible. Due to this inversion the TabLoader can start loading
background tabs in the minimized window before the active tab in the minimized
window is ever loaded.

Giving TabLoader responsibility to load all tabs fixes this. In the case of
active and visible tabs whose loads are initiated by the browser this is fine
because calling ReloadIfNecessary twice is effectively a nop, and the TabLoader
is already smart enough to track tabs that have started loading for external
reasons.

BUG=864725

Change-Id: I4b86a71470b2cb1a1a9106c4d4d92ee6b18c7284
Reviewed-on: https://chromium-review.googlesource.com/1141071
Reviewed-by: Sébastien Marchand <sebmarchand@chromium.org>
Commit-Queue: Chris Hamilton <chrisha@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576071}
Former-commit-id: 94218d2c7c21146db7306a79341c985bd10a1484